Fix overflow on long titles

--- a/components/carousel.module.scss
+++ b/components/carousel.module.scss
@@ -80,7 +80,7 @@ $columns: 620px;
 }
 
 .title {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   margin: 1rem 0 1rem auto;
   @media screen and (min-width: $columns) {
     margin: 0 auto 0 1rem;
